--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -39,5 +39,19 @@
             "manage-handbook": "Manage handbook"
             
         }
+    },
+    "manage-user": {
+        "add": "Add a new user",
+        "email": "Email",
+        "password": "Password",
+        "first-name": "First name",
+        "last-name": "Last name",
+        "phone-number": "Phome number",
+        "address": "Address",
+        "gender": "Gender",
+        "position": "Position",
+        "role": "Role",
+        "image": "Avatar",
+        "save": "Save"
     }
 }
