--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -52,6 +52,6 @@
         "position": "Position",
         "role": "Role",
         "image": "Avatar",
-        "save": "Save"
+        "save": "Save user"
     }
 }
