--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -38,6 +38,9 @@
             "handbook": "Handbook",
             "manage-handbook": "Manage handbook"
             
+        },
+        "doctor":{
+            "manage-schedule": "Manage Doctor's schedule"
         }
     },
     "manage-user": {
