--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -61,5 +61,12 @@
     "homepage": {
         "outstanding-doctor": "Outstanding Doctor of the Week",
         "more-infor": "See more"
+    },
+    "manage-schedule":{
+        "title": "Manage doctor's examination plan",
+        "choose-doctor": "Choose doctor",
+        "choose-date": "Choose date",
+        "save": "Save infor"
+
     }
 }
