update-thirty three

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -68,5 +68,13 @@
         "choose-date": "Choose date",
         "save": "Save infor"
 
+    },
+    "patient": {
+        "detail-doctor": {
+            "schedule": "Schedule",
+            "no-schedule": "The doctor does not have an appointment during this time, please choose another time!",
+            "choose": "Choose ",
+            "book-free": " and book(free)"
+        }
     }
 }
