update-thirty four

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -76,5 +76,14 @@
             "choose": "Choose ",
             "book-free": " and book(free)"
         }
+    },
+    "admin":{
+        "manage-doctor": {
+                "title": "Create more information Doctor",
+                "select-doctor": "Select doctor:",
+                "intro": "Introduction:",
+                "add": "Create infor",
+                "save": "Save infor"
+        }
     }
 }
