update-thirty five

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -80,10 +80,16 @@
     "admin":{
         "manage-doctor": {
                 "title": "Create more information Doctor",
-                "select-doctor": "Select doctor:",
-                "intro": "Introduction:",
+                "select-doctor": "Select doctor",
+                "intro": "Introduction",
                 "add": "Create infor",
-                "save": "Save infor"
+                "save": "Save infor",
+                "price": "Price",
+                "payment": "Payment",
+                "province": "Province",
+                "nameClinic": "Clinic name",
+                "addressClinic": "Clinic address",
+                "note": "Note "
         }
     }
 }
