--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -80,10 +80,16 @@
     "admin":{
         "manage-doctor": {
                 "title": "Tạo thêm thông tin Bác sĩ",
-                "select-doctor": "Chọn bác sĩ:",
+                "select-doctor": "Chọn bác sĩ",
                 "intro": "Thông tin giới thiệu:",
                 "add": "Tạo thông tin",
-                "save": "Lưu thông tin"
+                "save": "Lưu thông tin",
+                "price": "Giá khám bệnh",
+                "payment": "Phương thức thanh toán",
+                "province": "Tỉnh thành",
+                "nameClinic": "Tên phòng khám",
+                "addressClinic": "Địa chỉ phòng khám",
+                "note": "Ghi chú"
         }
     }
     
