update-thirty seven

--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -75,6 +75,13 @@
             "no-schedule": "Bác sĩ không có lịch hẹn trong thời gian này, vui lòng chọn thời gian khác!",
             "choose": "Chọn ",
             "book-free": " và đặt (miễn phí)"
+        },
+        "extra-infor-doctor": {
+            "text-address": "Địa chỉ phòng khám",
+            "price": "Giá khám: ",
+            "detail": "Xem chi tiết",
+            "payment": "Phòng khám có thanh toán bằng hình thức:",
+            "hide-price": "Ẩn bảng giá"
         }
     },
     "admin":{
