update-forty one

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -82,6 +82,20 @@
             "detail": "See detail",
             "payment": "The clinic has payment in the form of:",
             "hide-price": "Hide price list"
+        },
+        "booking-modal": {
+            "title": "Information to book a medical appointment",
+            "fullName": "Full Name",
+            "phoneNumber": "Phone number",
+            "email": "Email",
+            "address": "Address",
+            "reason": "Reason for medical examination",
+            "birthday": "Date of birth",
+            "gender": "Genders",
+            "btnConfirm": "Confirm",
+            "btnCancel": "Cancel",
+            "priceBooking" : "Free booking",
+            "price": "Price: "
         }
     },
     "admin":{
