--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -60,7 +60,8 @@
     },
     "homepage": {
         "outstanding-doctor": "Outstanding Doctor of the Week",
-        "more-infor": "See more"
+        "more-infor": "More Infor",
+        "speciality-poplular": "Popular specialties"
     },
     "manage-schedule":{
         "title": "Manage doctor's examination plan",
