--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -111,7 +111,9 @@
                 "province": "Tỉnh thành",
                 "nameClinic": "Tên phòng khám",
                 "addressClinic": "Địa chỉ phòng khám",
-                "note": "Ghi chú"
+                "note": "Ghi chú",
+                "speciality": "Chọn chuyên khoa",
+                "select-clinic": "Chọn phòng khám"
         }
     }
     
