--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -40,7 +40,8 @@
             
         },
         "doctor":{
-            "manage-schedule": "Manage Doctor's schedule"
+            "manage-schedule": "Manage Doctor's schedule",
+            "manage-patient": "Manage Doctor's patient"
         }
     },
     "manage-user": {
