--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -41,7 +41,8 @@
             
         },
         "doctor":{
-            "manage-schedule": "Quản lý kế hoạch khám bệnh"
+            "manage-schedule": "Tạo lịch khám bệnh",
+            "manage-patient": "Quản lý bệnh nhân khám bệnh"
         }
     },
     "manage-user": {
@@ -65,7 +66,7 @@
         "speciality-poplular": "Chuyên khoa phổ biến"
     },
     "manage-schedule":{
-        "title": "Quản lý kế hoạch khám bệnh của bác sĩ",
+        "title": "Tạo lịch khám bệnh",
         "choose-doctor": "Chọn bác sĩ",
         "choose-date": "Chọn ngày",
         "save": "Lưu thông tin"
